[build-system]
requires = [
    "setuptools>=61",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "acts-data-collector"
description = "Collect crypto asset data from binance and store in MongoDB"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"
license = { file = "LICENSE" }
authors = [{ name = "Roman Prokofyev" }]

[project.optional-dependencies]
dev = [
    "black>=22.3.0",
    "flake8>=4.0.1",
    "mypy>=1.2",
    "pytest>=7.1.2",
    "pre-commit>=2.19.0"
]

[tool.setuptools]
packages = ["datacollector"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.black]
line-length = 120
target_version = ["py310"]

[tool.flake8]
max-line-length = 120

[tool.mypy]
python_version = "3.10"

[tool.coverage.run]
relative_files = true
branch = true
# omit the tests themselves
omit = ["*/tests/*", "*/tmp/*"]

[tool.coverage.report]
exclude_lines = [
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]

ignore_errors = true
